<!--
  ~
  ~  Copyright (C) 2017-2020 Pierre Thomain
  ~
  ~  Licensed to the Apache Software Foundation (ASF) under one
  ~  or more contributor license agreements.  See the NOTICE file
  ~  distributed with this work for additional information
  ~  regarding copyright ownership.  The ASF licenses this file
  ~  to you under the Apache License, Version 2.0 (the
  ~  "License"); you may not use this file except in compliance
  ~  with the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing,
  ~  software distributed under the License is distributed on an
  ~  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~  KIND, either express or implied.  See the License for the
  ~  specific language governing permissions and limitations
  ~  under the License.
  ~
  -->

<resources>
    <string name="app_name">Glitchy Demo</string>
    <string name="loading">Loading…</string>
    <string name="cat_fact">Here\'s a cat fact for you:\n\n%s</string>
    <string name="handled_error">Gracefully handling an expected error:\n\n%s</string>
    <string name="unhandled_error">Oops, this should not have happened:\n\n%s</string>
    <string name="load_fact">Load a cat fact</string>
    <string name="throw_handled_exception">Throw a handled exception</string>
    <string name="throw_unhandled_exception">Throw an unhandled exception</string>
    <string name="use_rxjava">Use RxJava</string>
    <string name="use_flow">Use Coroutines Flow</string>
    <string name="use_glitch">Use GlitchFactory</string>
    <string name="use_api_error">Use ApiErrorFactory</string>
</resources>